--- a/1601Q_Lab_8_Pendulum_Dynamics_S25_v2-Copy1.ipynb
+++ b/1601Q_Lab_8_Pendulum_Dynamics_S25_v2-Copy1.ipynb
@@ -44,69 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "cellView": "form",
     "id": "P3CXpXxPF2gE"
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54849e5a6efc4ab6b494ac13809163dd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Section:', options=('Select your section', '001 - MoWeFr 10:10am-12:05pm'), value='Selec…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ef6a1a48323446681626d0125011a9b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value='', description='Group:', placeholder='Type group number here')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed1f1bb259be4b28baf534716a1ffcaa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value='', description='Names:', placeholder='Type group member names here')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4b2761e6cd44052b4b7f188a21f2604",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value='', description='URL:', placeholder='Copy-paste web address (URL) here')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Run this cell before moving on to import all necessary packages.\n",
     "!pip install -q openpyxl\n",
@@ -504,16 +447,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(1,lab)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(answers)"
+    "Q1(lab)"
    ]
   },
   {
@@ -536,7 +470,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(2,lab)"
+    "Q2(lab)"
    ]
   },
   {
@@ -559,7 +493,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(3,lab)"
+    "Q3(lab)"
    ]
   },
   {
@@ -582,7 +516,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(4,lab)"
+    "Q4(lab)"
    ]
   },
   {
@@ -615,7 +549,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(5,lab)"
+    "Q5(lab)"
    ]
   },
   {
@@ -638,7 +572,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(6,lab)"
+    "Q6(lab)"
    ]
   },
   {
@@ -661,7 +595,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(7,lab)"
+    "Q7(lab)"
    ]
   },
   {
@@ -764,7 +698,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(10,lab)"
+    "Q10(lab)"
    ]
   },
   {
@@ -787,7 +721,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(11,lab)"
+    "Q11(lab)"
    ]
   },
   {
@@ -810,7 +744,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(12,lab)"
+    "Q12(lab)"
    ]
   },
   {
@@ -833,7 +767,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(13,lab)"
+    "Q13(lab)"
    ]
   },
   {
@@ -856,7 +790,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(14,lab)"
+    "Q14(lab)"
    ]
   },
   {
@@ -879,7 +813,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(15,lab)"
+    "Q15(lab)"
    ]
   },
   {
@@ -902,7 +836,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to open the answer textbox.\n",
-    "Q(16,lab)"
+    "Q16(lab)"
    ]
   },
   {
@@ -988,118 +922,7 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "05de506ba0334985bba658ab38b371f0": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "3b4273c002e44a2baeb2bc2a7ae1a93a": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "53ac98e04b394215b02357a2fe7bff4c": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "TextStyleModel",
-      "state": {
-       "description_width": "",
-       "font_size": null,
-       "text_color": null
-      }
-     },
-     "54849e5a6efc4ab6b494ac13809163dd": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "DropdownModel",
-      "state": {
-       "_options_labels": [
-        "Select your section",
-        "001 - MoWeFr 10:10am-12:05pm"
-       ],
-       "description": "Section:",
-       "index": 0,
-       "layout": "IPY_MODEL_8e75a497c8864435a1627122ce94f88c",
-       "style": "IPY_MODEL_b5fe54dc22c04ae1aad4f187463baf88"
-      }
-     },
-     "755dc917eb064826b8403967f0dd5590": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "8e75a497c8864435a1627122ce94f88c": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "9ef6a1a48323446681626d0125011a9b": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "TextModel",
-      "state": {
-       "description": "Group:",
-       "layout": "IPY_MODEL_3b4273c002e44a2baeb2bc2a7ae1a93a",
-       "placeholder": "Type group number here",
-       "style": "IPY_MODEL_d20961c88f4545d9805313b2724ff503"
-      }
-     },
-     "b4b2761e6cd44052b4b7f188a21f2604": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "TextModel",
-      "state": {
-       "description": "URL:",
-       "layout": "IPY_MODEL_05de506ba0334985bba658ab38b371f0",
-       "placeholder": "Copy-paste web address (URL) here",
-       "style": "IPY_MODEL_53ac98e04b394215b02357a2fe7bff4c"
-      }
-     },
-     "b5fe54dc22c04ae1aad4f187463baf88": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "DescriptionStyleModel",
-      "state": {
-       "description_width": ""
-      }
-     },
-     "ba210378fc494f86aaab0baae37ae8cb": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "TextStyleModel",
-      "state": {
-       "description_width": "",
-       "font_size": null,
-       "text_color": null
-      }
-     },
-     "d20961c88f4545d9805313b2724ff503": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "TextStyleModel",
-      "state": {
-       "description_width": "",
-       "font_size": null,
-       "text_color": null
-      }
-     },
-     "ed1f1bb259be4b28baf534716a1ffcaa": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "TextModel",
-      "state": {
-       "description": "Names:",
-       "layout": "IPY_MODEL_755dc917eb064826b8403967f0dd5590",
-       "placeholder": "Type group member names here",
-       "style": "IPY_MODEL_ba210378fc494f86aaab0baae37ae8cb"
-      }
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
